fix: natively implement some LoginItem functions

--- a/vsts.yml
+++ b/vsts.yml
@@ -208,10 +208,8 @@ jobs:
   # Run this job only if we are supposed to run the tests,
   # and we have an Electron built either in the previous job or in a different job, defined by a user.
   condition: and(eq(variables['RUN_TESTS'], '1'), or(succeeded(), ne(variables['Custom.UseArtifacts.BuildId'], '')))
-# TODO(alexeykuzmin): Run on Microsoft-hosted agents
-# once https://github.com/electron/electron/issues/15041 is fixed.
-#  pool:
-#    vmImage: 'macOS-10.13'
+  pool:
+    vmImage: 'macOS-10.13'
   timeoutInMinutes: 20
   variables:
     CI: true
@@ -269,12 +267,11 @@ jobs:
       destinationFolder: src/out/Default/gen
     timeoutInMinutes: 1
 
-#  TODO(alexeykuzmin): Install Node when tests are run on Microsoft-hosted agents.
-#  - task: NodeTool@0
-#    displayName: Install Node.js 10.x
-#    inputs:
-#      versionSpec: '10.x'
-#    timeoutInMinutes: 2  # Should take less than a minute.
+  - task: NodeTool@0
+    displayName: Install Node.js 10.x
+    inputs:
+      versionSpec: '10.x'
+    timeoutInMinutes: 2  # Should take less than a minute.
 
   - bash: |
       cd src/electron
